--- a/NN_From_Scratch00.ipynb
+++ b/NN_From_Scratch00.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHA7g1yJ6jo7WtT6HKR5x3",
+      "authorship_tag": "ABX9TyMgzQXziLmNWvfHmqXyjDw8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,26 +27,60 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Theoretical Background\n",
+        "This is my attempt of understanding Neural Network from scratch and developing a simple model from scratch.\n",
+        "I am taking help from multiple youtube videos as I go through. Once (hopefully!) I complete this project, I will give all the links I used to learn this in the resources section.\n",
+        "Hopefully, you will enjoy this notebook!\n",
+        "\n",
+        "## Neural Network\n",
+        "\n",
+        "## Input Layer\n",
+        "\n",
+        "## Hidden Layer\n",
+        "\n",
+        "## Output Layer\n",
+        "\n",
+        "## Weights and Biases, why?\n",
+        "\n",
+        "## Activation functions - ReLu, tanh, Softmax\n",
+        "\n",
+        "## Forward Propagation\n",
+        "\n",
+        "## Backward Propagation\n",
+        "\n",
+        "## MNIST Dataset, Data Structure, Input Output Representation etc.\n",
+        "\n",
+        "## Coding Steps\n",
+        "\n",
+        "## Resources\n"
+      ],
+      "metadata": {
+        "id": "6IJHjDg_JftZ"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zOaIQcqFEO_V",
-        "outputId": "36a2c655-2c28-49da-d8eb-76df1995a8b3"
+        "outputId": "313d64e4-380b-450f-bdc0-67797c4f4569"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello\n"
+            "Hello World!\n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello\")"
+        "print(\"Hello World!\")"
       ]
     }
   ]
