--- a/NN_From_Scratch00.ipynb
+++ b/NN_From_Scratch00.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgzQXziLmNWvfHmqXyjDw8",
+      "authorship_tag": "ABX9TyOk5YPw+5ZX8YWH1Ikr+YOe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,32 +29,45 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Theoretical Background\n",
         "This is my attempt of understanding Neural Network from scratch and developing a simple model from scratch.\n",
         "I am taking help from multiple youtube videos as I go through. Once (hopefully!) I complete this project, I will give all the links I used to learn this in the resources section.\n",
         "Hopefully, you will enjoy this notebook!\n",
         "\n",
+        "# Theoretical Background\n",
+        "In this part of text, I will try to add all the knowledge I learnt along the way to understand Neural Networks from scratch. Below are the secions I planned to fill up.\n",
+        "\n",
         "## Neural Network\n",
+        "\n",
         "\n",
         "## Input Layer\n",
         "\n",
+        "\n",
         "## Hidden Layer\n",
+        "\n",
         "\n",
         "## Output Layer\n",
         "\n",
+        "\n",
         "## Weights and Biases, why?\n",
+        "\n",
         "\n",
         "## Activation functions - ReLu, tanh, Softmax\n",
         "\n",
+        "\n",
         "## Forward Propagation\n",
+        "\n",
         "\n",
         "## Backward Propagation\n",
         "\n",
+        "\n",
         "## MNIST Dataset, Data Structure, Input Output Representation etc.\n",
+        "\n",
         "\n",
         "## Coding Steps\n",
         "\n",
-        "## Resources\n"
+        "\n",
+        "## Resources\n",
+        "\n"
       ],
       "metadata": {
         "id": "6IJHjDg_JftZ"
